[gd_scene load_steps=26 format=3 uid="uid://c1nxd5aux2qvl"]

[ext_resource type="Script" path="res://Player/newPlayer.gd" id="1_c1cwn"]
[ext_resource type="Environment" uid="uid://b0ltdgsbqw2m1" path="res://Worlds/world_environment.tres" id="2_pbjct"]
[ext_resource type="AudioStream" uid="uid://bq1u4bll1m3yk" path="res://Audio/Effects/Mushroom.wav" id="3_2iij6"]
[ext_resource type="AudioStream" uid="uid://tp6w0yea4480" path="res://Audio/Effects/Land.wav" id="4_ocmxn"]
[ext_resource type="AudioStream" uid="uid://cawfi5a3wprvv" path="res://Audio/Effects/death.mp3" id="5_olqky"]
[ext_resource type="AudioStream" uid="uid://b4dtcw0kl8h7n" path="res://Audio/Effects/BitCollect.wav" id="6_ulqlb"]
[ext_resource type="Texture2D" uid="uid://crcg77uc2f6sv" path="res://Textures/shadow.png" id="7_0jk04"]
[ext_resource type="PackedScene" uid="uid://bud8gsinu5ptc" path="res://Player/auriModel.tscn" id="7_r22ru"]
[ext_resource type="PackedScene" uid="uid://bu1gleum7faqc" path="res://Player/homingEffect.tscn" id="9_5nfe0"]
[ext_resource type="Script" path="res://Player/pause_menu.gd" id="10_1woap"]
[ext_resource type="Theme" uid="uid://c4vrtqmqab678" path="res://UI/title.tres" id="11_jep6i"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ys4sl"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_lj47o"]
length = 2.0
slide_on_slope = true

[sub_resource type="Animation" id="Animation_ppe4r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:h_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:v_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ojn2d"]
resource_name = "ScreenShake"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:h_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.2, 0.0, -0.8, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:v_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.2, 0.0, -0.8, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uh4y7"]
_data = {
"RESET": SubResource("Animation_ppe4r"),
"ScreenShake": SubResource("Animation_ojn2d")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_iqq1t"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fpp87"]
size = Vector3(0.955, 1.53419, 2)

[sub_resource type="ParticleProcessMaterial" id="ParticlesMaterial_qbyin"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 0, 0)
spread = 5.01
initial_velocity_min = 5.0
initial_velocity_max = 5.0
gravity = Vector3(0, -1, 0)
color = Color(1, 1, 0.431373, 1)
hue_variation_min = -0.42
hue_variation_max = 0.26

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_71gfw"]
transparency = 1
blend_mode = 4
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 1, 0.00392157)
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="PlaneMesh" id="QuadMesh_bu1i1"]
material = SubResource("StandardMaterial3D_71gfw")
size = Vector2(0.656, 0.406)
orientation = 2

[sub_resource type="SphereShape3D" id="SphereShape3D_t5txg"]
radius = 0.573245

[sub_resource type="SphereShape3D" id="SphereShape3D_2ymgt"]

[sub_resource type="Theme" id="Theme_8b5sv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8evvd"]
bg_color = Color(0.101961, 0, 0.247059, 0.917647)

[node name="player" type="CharacterBody3D" groups=["Player"]]
floor_constant_speed = true
floor_max_angle = 1.11177
floor_snap_length = 0.31
platform_on_leave = 1
platform_floor_layers = 4294967293
platform_wall_layers = 2
safe_margin = 0.1
script = ExtResource("1_c1cwn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0440736, 0)
shape = SubResource("CapsuleShape3D_ys4sl")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.099351)

[node name="SpringArm3D" type="SpringArm3D" parent="Pivot"]
collision_mask = 986895
shape = SubResource("SeparationRayShape3D_lj47o")
spring_length = 20.08
margin = 1.39

[node name="Camera3D" type="Camera3D" parent="Pivot/SpringArm3D"]
environment = ExtResource("2_pbjct")
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot/SpringArm3D/Camera3D"]
libraries = {
"": SubResource("AnimationLibrary_uh4y7")
}

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2iij6")

[node name="LandSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ocmxn")
volume_db = -26.0
pitch_scale = 0.42

[node name="WalkSound" type="AudioStreamPlayer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_olqky")

[node name="AudioListener3D" type="AudioListener3D" parent="."]
current = true

[node name="Area3D" type="Area3D" parent="." groups=["seed"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_iqq1t")

[node name="coinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ulqlb")
volume_db = -80.0

[node name="JumpCloudSpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -1.09941, 0)

[node name="Decal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.27512, 0)
size = Vector3(2, 9, 2)
texture_albedo = ExtResource("7_0jk04")
distance_fade_enabled = true
distance_fade_begin = 30.0
cull_mask = 1048573

[node name="TargetDetectionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.03774)

[node name="CollisionShape3D" type="CollisionShape3D" parent="TargetDetectionArea"]
transform = Transform3D(13, 0, 0, 0, -5.68248e-07, -13, 0, 13, -5.68248e-07, 0, 3.1605e-09, -11.0723)
visible = false
shape = SubResource("BoxShape3D_fpp87")

[node name="auriModel" parent="." instance=ExtResource("7_r22ru")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.576, 0)

[node name="body" parent="auriModel" index="0"]
surface_material_override/0 = null

[node name="hat" parent="auriModel" index="1"]
surface_material_override/0 = null

[node name="leftFoot" parent="auriModel" index="2"]
surface_material_override/0 = null

[node name="rightFoot" parent="auriModel" index="3"]
surface_material_override/0 = null

[node name="AnimationTree" parent="auriModel" index="5"]
advance_expression_base_node = NodePath("../..")

[node name="Skeleton3D" parent="auriModel/SKM_Auri/Auri_Full" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
bones/1/position = Vector3(0.145624, 4.52995e-08, 2.33833e-18)
bones/2/position = Vector3(0.407353, -0.000572296, -0.00293532)
bones/3/position = Vector3(0.0669373, -0.000100429, 0.00295223)
bones/4/position = Vector3(-0.030072, 0.0245249, -0.0155435)
bones/5/position = Vector3(-0.0078204, -0.189281, 0.0282424)
bones/5/rotation = Quaternion(-0.146928, 0.650456, 0.733008, -0.134233)
bones/7/position = Vector3(-0.0143858, 0.192501, 0.0241189)
bones/7/rotation = Quaternion(-0.673256, 0.290367, 0.0483402, 0.678289)
bones/9/position = Vector3(-0.0226144, 0.0486971, -0.0217107)
bones/9/rotation = Quaternion(0.722049, -0.681298, 0.100366, -0.0663646)
bones/11/position = Vector3(-0.0754191, 0.00557167, -0.192448)
bones/11/rotation = Quaternion(0, 0, 0, 1)
bones/13/position = Vector3(-0.0215799, -0.0479481, -0.0215761)
bones/13/rotation = Quaternion(0.0724672, -0.0249428, -0.729358, 0.679826)
bones/15/position = Vector3(0.0754186, -0.00557159, 0.192448)
bones/15/rotation = Quaternion(1.73472e-18, -3.46945e-18, 2.1684e-18, 1)

[node name="L_Hand1" parent="auriModel/SKM_Auri/Auri_Full/Skeleton3D" index="6"]
transform = Transform3D(1, 6.18777e-08, 2.56661e-08, -6.18777e-08, 0.706415, 0.707798, 2.5666e-08, -0.707798, 0.706415, 0, 0, 0)

[node name="AnimationTree" parent="auriModel/SKM_Auri" index="4"]
advance_expression_base_node = NodePath("../../..")

[node name="runCloud" type="GPUParticles3D" parent="auriModel/SKM_Auri" index="5"]
transform = Transform3D(-0.120057, -1.17691e-09, 1.01493e-08, 0, 0.0510896, 0.030591, -1.04957e-08, 0.0134622, -0.116094, 0.00704619, -0.179804, -0.133804)
layers = 2
amount = 400
lifetime = 0.16
randomness = 1.0
collision_base_size = 0.1
process_material = SubResource("ParticlesMaterial_qbyin")
draw_pass_1 = SubResource("QuadMesh_bu1i1")

[node name="CrushDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.984555, 0)
collision_layer = 15
collision_mask = 15

[node name="CollisionShape3D" type="CollisionShape3D" parent="CrushDetector"]
transform = Transform3D(2.005, 0, 0, 0, 2.005, 0, 0, 0, 2.005, 0, 0.45206, 0)
shape = SubResource("SphereShape3D_t5txg")

[node name="Homing" parent="." instance=ExtResource("9_5nfe0")]

[node name="DeathCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 3.98414, 3)
environment = ExtResource("2_pbjct")

[node name="MovingPlatformDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.539592, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="MovingPlatformDetector"]
shape = SubResource("SphereShape3D_2ymgt")

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -10, 0)

[node name="PauseMenu" type="Panel" parent="."]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -441.5
offset_top = -250.0
offset_right = 441.5
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8b5sv")
theme_override_styles/panel = SubResource("StyleBoxFlat_8evvd")
script = ExtResource("10_1woap")

[node name="VFlowContainer" type="VFlowContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.023
anchor_right = 0.5
anchor_bottom = 1.0
offset_bottom = 9.49997
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("11_jep6i")
theme_override_constants/h_separation = 0
alignment = 1

[node name="Label" type="Label" parent="PauseMenu/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game is Paused!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume?" type="Button" parent="PauseMenu/VFlowContainer"]
layout_mode = 2
text = "Resume?"

[node name="Quit to Start?" type="Button" parent="PauseMenu/VFlowContainer"]
layout_mode = 2
text = "Quit to Start?"

[node name="Volume Label" type="Label" parent="PauseMenu/VFlowContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="audioSlider" type="HSlider" parent="PauseMenu/VFlowContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.8
metadata/_edit_use_anchors_ = true

[node name="coyoteTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="area_entered" from="TargetDetectionArea" to="." method="_on_target_detection_area_area_entered"]
[connection signal="area_exited" from="TargetDetectionArea" to="." method="_on_target_detection_area_area_exited"]
[connection signal="deathFinished" from="auriModel" to="." method="_on_deathFinished"]
[connection signal="jumpFinished" from="auriModel" to="." method="_JumpFinished"]
[connection signal="area_entered" from="CrushDetector" to="." method="_on_crush_detector_area_entered"]
[connection signal="body_entered" from="CrushDetector" to="." method="_on_crush_detector_body_entered"]
[connection signal="body_entered" from="MovingPlatformDetector" to="." method="_on_moving_platform_detector_body_entered"]
[connection signal="pressed" from="PauseMenu/VFlowContainer/Resume?" to="PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VFlowContainer/Quit to Start?" to="PauseMenu" method="_on_quit_to_start_pressed"]
[connection signal="value_changed" from="PauseMenu/VFlowContainer/audioSlider" to="PauseMenu" method="_on_audio_slider_value_changed"]
[connection signal="timeout" from="coyoteTimer" to="." method="_on_coyote_timer_timeout"]

[editable path="auriModel"]
[editable path="auriModel/SKM_Auri"]
